Revision history for {{ $dist->name }}:

{{$NEXT}}

v0.4.2    2022-09-03 09:37:03+01:00 Europe/London
  [Documentation]
  - Updated copyright year.

  - Fix encoding of links in README.

  [Other]
  - Fix issue with MANIFEST.SKIP.

  - Sign release.

v0.4.1    2020-07-31 14:56:41+01:00 Europe/London
  [Documentation]
  - Updated copyright year.

  [Toolchain]
  - Add core modules in the prerequisites.

  - Removed unnecessary prerequisite.

v0.4.0    2019-11-19 19:01:43+00:00 Europe/London
  [Incompatible Changes]
  - Perl v5.10 or newer is now required.

  [Documentation]
  - Minor rewording.

  - Add MooX::Const to SEE ALSO.

  [Other]
  - This module is no longer experimental.

v0.3.8    2019-11-14 17:46:36+00:00 Europe/London
  [Documentation]
  - Add Types::ReadOnly to SEE ALSO.

v0.3.7    2019-02-14 13:09:39+00:00 Europe/London
  [Documentation]
  - Fix broken link in POD (Mohammad S Anwar).

v0.3.6    2018-12-06 17:51:23+00:00 Europe/London
  [Bug Fixes]
  - Set minimum version of Storable for Regexp support.

v0.3.5    2018-11-20 19:05:10+00:00 Europe/London
  [Documentation]
  - Added a note about possible issues with RegexpRefs, RT#127635.

v0.3.4    2018-11-13 20:28:01+00:00 Europe/London
  [Documentation]
  - Added a ROADMAP section for planned changes.

  [Tests]
  - Use Test::TypeTiny for testing.

v0.3.3    2018-11-10 22:06:06+00:00 Europe/London
  [Bug Fix]
  - Uses version modeule for older Perls than cannot handle tuple
    versions.

  [Documentation]
  - Fixed typo in Changes.

  [Toolchain]
  - Use a different Pod::Coverage plugin.

v0.3.2    2018-11-10 02:26:35+00:00 Europe/London
  [Bug Fix]
  - Fix checks for read-only RegexpRefs.

  [Documentation]
  - Added section on performance issues.

  - Added notes on limitations.

  [Toolchain]
  - Added diagnostics for cpantesters.

  - Updated development tests.

  [Other]
  - Added minimum version for recommended Ref::Util::XS.

v0.3.1    2018-11-09 18:48:21+00:00 Europe/London
  [Documentation]