@@ -11,8 +11,7 @@ requires "Type::Utils" => "0";
 requires "Types::Standard" => "0";
 requires "Types::TypeTiny" => "0";
 requires "namespace::autoclean" => "0.28";
-requires "perl" => "v5.10.0";
-requires "strict" => "0";
+requires "perl" => "v5.14.0";
 requires "warnings" => "0";
 recommends "Ref::Util::XS" => "0.100";
 recommends "Type::Tiny::XS" => "0";
@@ -25,6 +24,7 @@ on 'test' => sub {
   requires "Test::Most" => "0";
   requires "Test::TypeTiny" => "0";
   requires "lib" => "0";
+  requires "strict" => "0";
 };
 
 on 'test' => sub {
