@@ -21,7 +21,6 @@ command = type
 [Region  / postlude]
 
 [Bugs]
-header = KNOWN ISSUES
 
 [SourceGitHub]
 
